add more deployment content

--- a/notebooks/Webinar_6/dashboarding_with_voila.ipynb
+++ b/notebooks/Webinar_6/dashboarding_with_voila.ipynb
@@ -53,6 +53,88 @@
     "\n",
     "Simply replace the `/lab` ending with `/voila` and you should be able to see the voila renderer!"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: orange; font-size:18px\">You can also enable `dark mode` by appending `?voila-theme=dark` to the currently displayed voila app web-address:</span>\n",
+    "\n",
+    "`https://xxxx.org/user/xxxxxx/voila/render/some_application.ipynb?voila-theme=dark`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: limegreen; font-size:18px\">...and that's all you had to do to convert your Jupyter application to a dashboard!</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Let's try it with the two applications in folder of this tutorial file!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------\n",
+    "### Templating: \n",
+    "\n",
+    "\n",
+    "'Grid Stack' template (runs only in a local installation): \n",
+    "\n",
+    "1. `conda install -c conda-forge voila-gridstack` (install)\n",
+    "2. `voila --template=gridstack . --VoilaConfiguration.resources='{\"gridstack\": {\"show_handles\": True}}' --theme=dark` (run)\n",
+    "\n",
+    "\n",
+    "'Voila-vuetify' template (runs only in a local installation): \n",
+    "\n",
+    "1. `conda install -c conda-forge voila-vuetify` (install)\n",
+    "2. `voila --template=vuetify-default --theme=light` (run)\n",
+    "\n",
+    "<span style=\"color: orange; font-size:16px\">To use these templates in the Jupyter environment, append `?voila-template=<tamplate_of_choice>` to the address of the running voila app.</span>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<span style=\"color: orange; font-size:16px\">You can read more about templating in voila</span> [in the documentation link](https://voila.readthedocs.io/en/stable/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "-----------------------------\n",
+    "### Deployment:\n",
+    "\n",
+    "<span style=\"color: orange; font-size:16px\">The \"Learn Jupyter with Bloomberg\" is also configured to work as a Voila Binder deployment.</span> [Let's check it out together](https://github.com/ibdafna/learning_jupyter_with_bloomberg) \n",
+    "\n",
+    "Once you have followed the \"Setting up your repo for Binder\" [instructions](https://mybinder.readthedocs.io/en/latest/introduction.html#preparing-a-repository-for-binder) (you can also look at the structure of the \"Learn Jupyter with Bloomberg\" repo), the final step is to add the basic configuration file which tells voila what theme, template and other configuration to use:\n",
+    "\n",
+    "```json\n",
+    "{\n",
+    "  \"VoilaConfiguration\": {\n",
+    "    \"theme\": \"dark\",\n",
+    "    \"template\": \"gridstack\"\n",
+    "  }\n",
+    "}\n",
+    "```\n",
+    "\n",
+    "This example uses the dark theme with the gridstack template. Name this file `jupyter_config.json` and add it to the root of your repo!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
