--- a/notebooks/Webinar_6/dashboarding_with_voila.ipynb
+++ b/notebooks/Webinar_6/dashboarding_with_voila.ipynb
@@ -130,11 +130,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "1. Go to [mybinder.org](https://mybinder.org)\n",
+    "2. Paste the link to your repo under \"GitHub repository name or URL:\" https://github.com/ibdafna/learning_jupyter_with_bloomberg\n",
+    "3. Under \"Path to a notebook file\", **select URL** add the voila renderer path along with the path and name of notebook you want to render:\n",
+    "`/voila/render/notebooks/Webinar_6/linear_regression_app.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example deployment link:\n",
+    "    \n",
+    "https://mybinder.org/v2/gh/ibdafna/learning_jupyter_with_bloomberg/HEAD?urlpath=%2Fvoila%2Frender%2Fnotebooks%2FWebinar_6%2Flinear_regression_app.ipynb"
+   ]
   }
  ],
  "metadata": {
