--- a/notebooks/Webinar_6/dashboarding_with_voila.ipynb
+++ b/notebooks/Webinar_6/dashboarding_with_voila.ipynb
@@ -14,6 +14,9 @@
    "metadata": {},
    "source": [
     "#### Installation instructions for Voila, if you are using local installation of this repo:\n",
+    "\n",
+    "_We highly recommend you install any packages in a virtual environment_\n",
+    "\n",
     "with the `conda` package manager:\n",
     "\n",
     "* `conda install -c conda-forge voila`\n",
