add voila preview installation

--- a/notebooks/Webinar_6/dashboarding_with_voila.ipynb
+++ b/notebooks/Webinar_6/dashboarding_with_voila.ipynb
@@ -25,6 +25,8 @@
     "\n",
     "* `pip install voila`\n",
     "\n",
+    "(Optional): install the `voila-preview` JupyterLab extension:\n",
+    "`jupyter labextension install @jupyter-voila/jupyterlab-preview`\n",
     "\n",
     "<span style=\"color: orange; font-size:18px; font-weight: light;\">We recommend installing with conda if possible!</span>"
    ]
